--- a/css/home.css
+++ b/css/home.css
@@ -443,3 +443,13 @@ body {
     font-size: 13.5px;
     text-transform: uppercase;
 }
+#notif-feed li.replenished {
+    background-color: #e0f7ff;    
+    border-left: 5px solid #00bfff; 
+    color: #005f87;              
+}
+#notif-feed li.new-stock {
+    background-color: #835a0e;     
+    border-left: 5px solid #39250d; 
+    color: #eeeeed;                 
+}
