--- a/css/supply.css
+++ b/css/supply.css
@@ -365,3 +365,13 @@
     color: #888;
     padding: 4px 0;
 }
+#notif-feed li.replenished {
+    background-color: #e0f7ff;    /* soft blue, signals refresh/updated */
+    border-left: 5px solid #00bfff; /* brighter blue for the indicator */
+    color: #005f87;               /* darker blue for text readability */
+}
+#notif-feed li.new-stock {
+    background-color: #835a0e;     
+    border-left: 5px solid #39250d; 
+    color: #eeeeed;                 
+}
