--- a/css/supply.css
+++ b/css/supply.css
@@ -11,7 +11,7 @@
 
 /* ---------------- GLOBAL ---------------- */
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: Arial, sans-serif;
     color: var(--text);
     margin: 0;
     padding: 0;
@@ -193,7 +193,7 @@ body::after {
     border-radius: 20px;
     border: none;
     outline: none;
-    font-family: 'Poppins', sans-serif;
+    font-family: Arial, sans-serif;
     background: rgba(255, 255, 255, 0.2);
     color: var(--text);
 }
